<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fr_eventos"
    android:padding="16dp"
    tools:context=".EventosActivity">

    <!-- Fecha y navegación del calendario -->
    <ImageView
        android:id="@+id/barra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tabla_semana"
        app:layout_constraintStart_toStartOf="@+id/tabla_semana"
        app:layout_constraintEnd_toEndOf="@+id/tabla_semana"
        app:srcCompat="@drawable/img_barra_negra" />

    <LinearLayout
        android:id="@+id/layout_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/diaSemana"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textSize="50sp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/texto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tabla_semana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_margin="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/layout_fecha"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Fila con los días de la semana -->
        <TableRow>
            <TextView
                android:id="@+id/dia0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dia1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dia2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dia3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/img_rectangulo_esq_sup" />

            <TextView
                android:id="@+id/dia4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dia5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dia6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />
        </TableRow>

        <!-- Fila con los números de la semana -->
        <TableRow>
            <TextView
                android:id="@+id/numero0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/numero1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/numero2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/numero3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/img_rectangulo_esq_inf"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/numero4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/numero5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/numero6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barra"
        app:layout_constraintStart_toStartOf="@+id/fr_eventos"
        app:layout_constraintEnd_toEndOf="@+id/fr_eventos"
        app:layout_constraintBottom_toBottomOf="@+id/fr_eventos"/>
</androidx.constraintlayout.widget.ConstraintLayout>