<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verParticipantesEvento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerParticipantes">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/volver"
        android:src="@drawable/img_btn_volver"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/verParticipantesEvento"
        app:layout_constraintTop_toTopOf="@id/txtParticipantes"
        app:layout_constraintBottom_toBottomOf="@id/txtParticipantes"
        />


    <TextView
        android:id="@+id/txtParticipantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/verParticipantesEvento"
        app:layout_constraintEnd_toEndOf="@+id/verParticipantesEvento"
        app:layout_constraintTop_toTopOf="@id/verParticipantesEvento"
        android:text="@string/participantes"
        android:textSize="24sp"
        android:textColor="@color/red"
        android:fontFamily="@font/lora_semibolditalic"
        />

    <TextView
        android:id="@+id/sinParticipantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_participantes"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/verParticipantesEvento"
        app:layout_constraintEnd_toEndOf="@id/verParticipantesEvento"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantes"
        app:layout_constraintBottom_toBottomOf="@id/verParticipantesEvento"
        android:textSize="24sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerParticipantes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/txtParticipantes"
        app:layout_constraintEnd_toEndOf="@+id/verParticipantesEvento"
        app:layout_constraintStart_toStartOf="@+id/verParticipantesEvento"
        app:layout_constraintBottom_toBottomOf="@+id/verParticipantesEvento"
        />
</androidx.constraintlayout.widget.ConstraintLayout>