<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventoClick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".EventoClick">

    <!-- Imagen superior -->
    <ImageView
        android:id="@+id/imagenEvento"
        android:layout_width="650dp"
        android:layout_height="400dp"
        android:src="@drawable/prueba"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@id/guiaLinea2"
        app:layout_constraintEnd_toEndOf="@+id/eventoClick"
        app:layout_constraintStart_toStartOf="@+id/eventoClick"
        app:layout_constraintTop_toTopOf="@+id/eventoClick"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaLinea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaLinea3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaLinea4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


    <ImageView
        android:id="@+id/cuadro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/img_fondo_evento"
        app:layout_constraintBottom_toBottomOf="@id/eventoClick"
        app:layout_constraintEnd_toEndOf="@id/eventoClick"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guiaLinea3"
        app:layout_constraintVertical_bias="0.0"/>

        <!-- Título del evento -->

        <!-- Nombre del organizador -->
        <TextView
            android:id="@+id/tituloEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/ejemp_titulo_evento"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/perfilFoto"
            app:layout_constraintTop_toBottomOf="@id/perfilFoto" />

        <TextView
            android:id="@+id/nombreOrganizador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ejem_nombre"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tituloEvento"
            app:layout_constraintTop_toBottomOf="@id/tituloEvento" />

        <!-- Ubicación -->
        <TextView
            android:id="@+id/ubicacionEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/ejem_localizacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/nombreOrganizador"
            app:layout_constraintTop_toBottomOf="@id/nombreOrganizador" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/nombreOrganizador"
            app:layout_constraintEnd_toEndOf="@id/eventoClick"
            app:layout_constraintTop_toBottomOf="@id/ubicacionEvento">

        <!-- Grupo 1: Personas (Texto SUPERPUESTO sobre imagen) -->
        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <!-- Imagen -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/img_label_user"
                android:contentDescription="@string/personas"/>

            <!-- Texto en parte superior de la imagen -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="65dp"
            />

        </FrameLayout>

        <!-- Grupo 2: Fecha (Misma estructura) -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/img_label_fecha"
                android:contentDescription="@string/fecha_del_evento"/>

            <TextView
                android:id="@+id/fechaEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formato_fecha"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"/>

        </FrameLayout>

        <!-- Grupo 3: Vistas -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/img_label_vistas"
                android:scaleType="fitCenter"
                android:contentDescription="vistas"/>

            <TextView
                android:id="@+id/horaEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"/>

        </FrameLayout>

    </LinearLayout>



        <ScrollView
            android:id="@+id/scrollDescripcion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/descripcionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Si te gusta el cine tanto como a mí, te invito a encontrarnos para una reunión para hablar del buen cine."
                android:textColor="@color/black"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp" />
        </ScrollView>


    <ImageView
        android:id="@+id/perfilFoto"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/perfil"
        app:layout_constraintStart_toStartOf="@+id/eventoClick"
        app:layout_constraintTop_toTopOf="@+id/guiaLinea4" />

    <ImageView
        android:id="@+id/btn_vamos"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="@+id/eventoClick"
        android:src="@drawable/img_button_vamos"
        app:layout_constraintTop_toTopOf="@+id/guiaLinea4"
        />

</androidx.constraintlayout.widget.ConstraintLayout>