<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fr_disti_even"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_borde_rojo"
    >

    <TextView
        android:id="@+id/misEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_eventos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:background="?android:attr/selectableItemBackground"
        />

    <TextView
        android:id="@+id/otrosEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otros_eventos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:background="?android:attr/selectableItemBackground"
        />

    <View
        android:id="@+id/indicadorMisEventos"
        android:layout_width="110dp"
        android:layout_height="4dp"
        android:background="@drawable/img_barra_roja"
        app:layout_constraintTop_toBottomOf="@id/misEventos"
        app:layout_constraintStart_toStartOf="@id/misEventos"
        app:layout_constraintEnd_toEndOf="@id/misEventos"
        android:visibility="gone"
        />

    <View
        android:id="@+id/indicadorOtrosEventos"
        android:layout_width="110dp"
        android:layout_height="4dp"
        android:background="@drawable/img_barra_roja"
        app:layout_constraintTop_toBottomOf="@id/otrosEventos"
        app:layout_constraintStart_toStartOf="@id/otrosEventos"
        app:layout_constraintEnd_toEndOf="@id/otrosEventos"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/agregarEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_agregar_eventos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/noEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_eventos_creado"
        app:layout_constraintTop_toTopOf="@id/agregarEventos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEventos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/indicadorMisEventos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/agregarEventos"
        />

</androidx.constraintlayout.widget.ConstraintLayout>